--- a/Source/AlephNote.App/WPF/Controls/NotesListView.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesListView.xaml
@@ -7,6 +7,7 @@
 			 xmlns:conv="clr-namespace:AlephNote.WPF.Converter"
 			 xmlns:services="clr-namespace:AlephNote.WPF.Services"
 			 xmlns:controls="clr-namespace:AlephNote.WPF.Controls"
+			 xmlns:pi="clr-namespace:AlephNote.PluginInterface;assembly=AlephNote.PluginInterface"
 			 xmlns:settings="clr-namespace:AlephNote.Common.Settings.Types;assembly=AlephNote.Common"
 			 mc:Ignorable="d" 
 			 d:DesignHeight="300" d:DesignWidth="150">
