--- a/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="AlephNote.WPF.Controls.NotesListView"
+﻿<UserControl x:Class="AlephNote.WPF.Controls.NotesViewFlat"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -34,8 +34,8 @@
 			</Setter>
 		</Style>
 	</UserControl.Resources>
-	
-	<Grid x:Name="RootGrid" d:DataContext="{d:DesignInstance self:NotesListView}" >
+
+	<Grid x:Name="RootGrid" d:DataContext="{d:DesignInstance self:NotesViewFlat}" >
 		<ListView x:Name="NotesList"
 					  AllowDrop="True"
 					  Drop="NotesList_Drop"
